--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather APP</title>
+    <link rel="stylesheet" href="src/style.css" />
 </head>
 
 <body>
@@ -41,6 +42,7 @@
             </div>
         </div>
     </div>
+    <script src="src/app.js"></script>
 </body>
 
 </html>
