added link Font Awesome and icon/ some CSS changes - margin and padding - icon and illustration

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather APP</title>
+    <script src="https://kit.fontawesome.com/bc9c155bf2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/style.css" />
 </head>
 
@@ -32,7 +33,7 @@
                     <strong class="weather-temperature">
                         <span>19 °C</span>
                     </strong>
-                    <img src="icon" alt="icon">
+                    <i class="fas fa-sun"></i>
                 </div>
                 <ul>
                     <li>Humidity</li>
