display city,current date,description,degrees,humidity and wind

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
         </div>
         <div class="section-city">
             <div class="my-city">
-                <h2>
+                <h2 id="display-city">
                     City
                 </h2>
                 <ul>
-                    <li>Current date</li>
-                    <li>Description</li>
+                    <li id="current-date">Current date</li>
+                    <li id="description">Description</li>
                 </ul>
                 <div class="display-degrees">
                     <strong class="weather-temperature">
-                        <span>19 °C</span>
+                        <span id="deg-celsius">°C</span>
                     </strong>
                     <i class="fas fa-sun"></i>
                 </div>
                 <ul>
-                    <li>Humidity</li>
-                    <li>Wind</li>
+                    <li>Humidity: <span id="humidity"></span> %</li>
+                    <li>Wind: <span id="wind"></span> km/h</li>
                 </ul>
             </div>
             <div class="my-ilustration">
