--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 </ul>
                 <div class="display-degrees">
                     <strong class="weather-temperature">
-                        <span id="deg-celsius">°C</span>
+                        <span id="deg-celsius"></span> °C
                     </strong>
-                    <i class="fas fa-sun"></i>
+                    <img src="" alt="" id="main-icon" class="main-icons" />
                 </div>
                 <ul>
                     <li>Humidity: <span id="humidity"></span> %</li>
