display the searched city

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             Weather Application
         </h1>
         <div>
-            <form class="myForm">
-                <input type="search" placeholder="search for city.." autocomplete="off" autofocus="on" />
-                <button>Search</button>
+            <form class="myForm" id="search-form">
+                <input type="search" placeholder="search for city.." autocomplete="off" autofocus="on"
+                    id="search-input" />
+                <button id="search-button">Search</button>
             </form>
         </div>
         <div class="section-city">
