current button and current temperature according to the current location

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </h1>
         <div>
             <form class="myForm" id="search-form">
-                <input type="search" placeholder="search for city.." autocomplete="off" autofocus="on"
-                    id="search-input" />
+                <input type="search" placeholder="search for city.." autocomplete="off" autofocus="on" id="search-input">
                 <button id="search-button">Search</button>
+                <button id="current-button">Current</button>
             </form>
         </div>
         <div class="section-city">
