change to celsius / fahrenheit

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
                     <li id="description">Description</li>
                 </ul>
                 <div class="display-degrees">
-                    <strong class="weather-temperature">
-                        <span id="deg-celsius"></span> °C
+                    <strong>
+                        <span class="weather-temperature" id="degrees"></span>
+                        <span class="celsius-fahrenheit">
+                        <a href="#" id="deg-celsius"> °C </a>|  
+                        <a href="#" id="deg-fahrenheit"> °F</a>
+                        </span>
                     </strong>
                     <img src="" alt="" id="main-icon" class="main-icons" />
                 </div>
