--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <img src="src/weather.png" alt="ilustration" class="main-img" />
             </div>
         </div>
+        <div class="section-forecast" id="forecast"></div>
     </div>
     <script src="src/app.js"></script>
 </body>
