--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
         </div>
         <div class="section-forecast" id="forecast"></div>
     </div>
+    <div class="footer">
+        <small>
+        <a href="https://github.com/EmilijaAceska/weather.git" target="_blank">Open-source code</a>
+        <span>, by Emilija Aceska</span>
+        </small>
+    </div>
     <script src="src/app.js"></script>
 </body>
 
