--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
                 <div class="display-degrees">
                     <strong>
                         <span class="weather-temperature" id="degrees"></span>
-                        <span class="celsius-fahrenheit">
-                        <a href="#" id="deg-celsius"> °C </a>|  
-                        <a href="#" id="deg-fahrenheit"> °F</a>
-                        </span>
                     </strong>
+                       <span class="celsius-fahrenheit">
+                        <a href="#" id="deg-celsius" class="active"> °C </a>|  
+                        <a href="#" id="deg-fahrenheit"class="active"> °F</a>
+                        </span>
+                    
                     <img src="" alt="" id="main-icon" class="main-icons" />
                 </div>
                 <ul>
